2008-08-14  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	* configure.in: allow browser plugins to be installed
	somewhere else than in ${libdir}/mozilla/plugins.
	(Closes: #547688)

2008-08-13  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/youtube/youtube.py: Patch from Eric Piel
	<e.a.b.piel@tudelft.nl> to stop the throbber from eating CPU when
	pulsing (Closes: #546742)

2008-08-13  Bastien Nocera  <hadess@hadess.net>

	* README:
	* data/totem.ui: Fix "Fit window to movie" and "Zoom reset"
	keyboard shortcuts (Closes: #546281)

2008-08-12  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Based on patch by: Robin Stocker <robin at nibor org>

	* src/backend/bacon-video-widget-gst-0.10.c:
	  (bacon_video_widget_get_zoom), (bvw_get_color_balance_channel),
	  (bacon_video_widget_get_video_property),
	  (bacon_video_widget_set_video_property)::
	  Refactor common code into bvw_get_color_balance_channel function.
	  (Closes: #547003)

2008-08-12  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui: Make sure we use the border width is set to
	1 by default, as used in the code, spotted by Dylan McCall
	(Closes: #544089)

2008-08-08  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add application/smil+xml as used at
	http://www.cartalk.com/Radio/Show/online.html

2008-08-07  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Patch by: David Schleef <ds@schleef.org>

	* src/backend/bacon-video-widget-gst-0.10.c:
	  (bacon_video_widget_get_video_property),
	  (bacon_video_widget_set_video_property)::
	  Fix rounding errors when converting colorbalance values to/from
	  a different value range. Should fix drift in colour balance.
	  (Closes: #545566, #537889)

2008-07-30  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/lirc/totem-lirc.c (impl_activate): Also fail to load
	if we're missing a data file

2008-07-30  Bastien Nocera  <hadess@hadess.net>

	* data/lirc_example:
	* src/plugins/lirc/Makefile.am: