@@ -1,3 +1,13 @@
+2008-08-14  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-playlist.c (playlist_select_subtitle_action_callback),
+	(playlist_copy_location_action_callback): Always call
+	totem_add_subtitle with the path of the currently playing movie
+	* src/totem-uri.c (totem_add_subtitle): When passed a path, still
+	use the last open path to be in, but also add a shortcut to
+	the currently playing movie, so you can easily access it to open
+	a subtitle (Closes: #545984)
+
 2008-08-14  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>
 
 	* configure.in: allow browser plugins to be installed
